<resources>
    <string name="app_name">UsersApp_AdrianSaavedra</string>
    <string name="title">Users App</string>
    <string name="id">ID:</string>
    <string name="value">value</string>
    <string name="comments">Comments</string>
    <string name="users">Users</string>
    <string name="tasks">Tasks</string>
    <string name="error_obteniendo_usuarios">Error obteniendo usuarios</string>
    <string name="user">User</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="phone">phone</string>
    <string name="error_obteniendo_usuario">Error al cargar el usuario</string>
    <string name="error_eliminando_usuario">Error eliminando usuario</string>
    <string name="usuario_eliminado_exitosamente">Usuario eliminado exitosamente</string>
    <string name="error_actualizando_usuario">Error actualizando usuario</string>
    <string name="usuario_actualizado_exitosamente">Usuario actualizado exitosamente</string>
    <string name="add">Add</string>
    <string name="campos_vacios">Campos vacios</string>
    <string name="usuario_agregado_exitosamente">Usuario agregado exitosamente</string>
    <string name="error_agregando_usuario">Error al agregar el usuario</string>
    <string name="error_obteniendo_tareas">Error obteniendo tareas</string>
    <string name="user_details">User Screen</string>
    <string name="add_user">Add User</string>
    <string name="id_user">User ID:</string>
    <string name="id_post">Post ID:</string>
    <string name="post">Post</string>
    <string name="error_obteniendo_comentarios">Error obteniendo comentarios</string>
</resources>