<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_redondo"
    android:layout_margin="@dimen/item_padding"
    android:elevation="@dimen/item_elevation"
    >
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" /> <!-- Aumentado de 0.07 a 0.15 -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        android:text="@string/user"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@+id/tvLblTask"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd2"
        app:layout_constraintBottom_toTopOf="@+id/tvNombre"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLblTask"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        android:text="@string/id_user"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginEnd="@dimen/app_padding"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintEnd_toStartOf="@id/tvUserName"
        app:layout_constraintBottom_toTopOf="@+id/tvNombre"
        app:layout_constraintHorizontal_chainStyle="packed"
        />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNombre"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        android:text="@string/tasks"
        android:maxLines="3"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd2"
        app:layout_constraintBottom_toTopOf="@+id/tvValue"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/common_label_text_size"
        android:text="@string/value"
        android:maxLines="1"
        android:textAlignment="center"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/tvNombre"
        app:layout_constraintStart_toEndOf="@id/tvEquals"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd2"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"/>


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:buttonTint="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/tvValue"
        app:layout_constraintTop_toBottomOf="@id/tvNombre"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/common_label_text_size"
        android:text="@string/id"
        android:maxLines="1"
        android:layout_marginEnd="@dimen/app_padding"
        android:textAlignment="center"
        android:ellipsize="end"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/tvNombre"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/tvValue"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"/>

</androidx.constraintlayout.widget.ConstraintLayout>